# test

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  file1.txt
src/: CMakeLists.txt  bin_search.cpp  bin_search.h  main.cpp
tests/: CMakeLists.txt  bin_search.cpp  example.cpp
